--- a/global.css
+++ b/global.css
@@ -1,3 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
+
+*{
+  --darkBlue: #0E1A2B;
+  --blue: #152741;
+  --lightBlue: #4658D9;
+  --overlay: #000000E6;
+
+  font-family: "Bricolage Grotesque", sans-serif;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 200,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 /* Body & container */
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
