--- a/global.css
+++ b/global.css
@@ -4,27 +4,38 @@
   --darkBlue: #0E1A2B;
   --blue: #152741;
   --lightBlue: #4658D9;
-  --overlay: #000000E6;
+  --overlay: #000000d4;
+  --navBlue: #1b2956;
 
   font-family: "Bricolage Grotesque", sans-serif;
+
+  margin: 0;
 }
 
-.material-symbols-outlined {
+.material-symbols-rounded {
   font-variation-settings:
   'FILL' 0,
-  'wght' 200,
+  'wght' 300,
   'GRAD' 0,
-  'opsz' 24
+  'opsz' 24;
+}
+.material-symbols-rounded.active {
+  font-variation-settings:
+  'FILL' 1
 }
 
 /* Body & container */
-body {
+/* body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   background: linear-gradient(to bottom, #eef2f3, #ffffff);
   margin: 0;
   padding: 1rem;
   font-size: 18px; 
   line-height: 1.5;
+} */
+
+body{
+  margin: 0;
 }
 
 .container {
@@ -54,7 +65,7 @@ ul {
   max-height: 250px;
   overflow-y: auto;
   border-radius: 12px;
-  font-size: 1.8rem; /* større og læsbar */
+  font-size: 1.8rem;
 }
 
 ul li {
@@ -89,13 +100,13 @@ ul li:hover {
 }
 
 .hourly-box {
-  min-width: 100px;      /* bredde på hver time-boks */
+  min-width: 100px;
   background: white;
   border-radius: 12px;
   padding: 15px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   text-align: center;
-  flex-shrink: 0;        /* forhindrer bokse i at krympe */
+  flex-shrink: 0;
   font-size: 1.4rem;
 }
 
