--- a/amalie.css
+++ b/amalie.css
@@ -17,6 +17,10 @@
   'GRAD' 0,
   'opsz' 24
 }
+.material-symbols-outlined.active {
+  font-variation-settings:
+  'FILL' 1
+}
 
 /* Body & container */
 body {
