--- a/amalie.css
+++ b/amalie.css
@@ -5,6 +5,7 @@
   --blue: #152741;
   --lightBlue: #4658D9;
   --overlay: #000000E6;
+  --navBlue: #1b2956;
 
   font-family: "Bricolage Grotesque", sans-serif;
   margin: 0;
@@ -15,11 +16,14 @@
   'FILL' 0,
   'wght' 200,
   'GRAD' 0,
-  'opsz' 24
+  'opsz' 24;
 }
-.material-symbols-outlined.active {
-  font-variation-settings:
-  'FILL' 1
+.material-symbols-outlined.active{
+  font-variation-settings: 
+  'FILL' 1,
+  'wght' 200,
+  'GRAD' 0,
+  'opsz' 24;
 }
 
 /* Body & container */
@@ -226,3 +230,63 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
+
+
+
+nav{
+    background-color: var(--navBlue);
+    padding-block: 16px;
+    display: flex;
+    justify-content: space-evenly;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    z-index: 2;
+}
+nav p{
+  font-size: 12px;
+}
+.nav-divider{
+    background-color: white;
+    width: 2px;
+}
+.nav-link-wrapper{
+    color: white;
+    text-align: center;
+    font-size: 1.25rem;
+    padding: 0 1rem;
+}
+span.close-icon{
+  color: white;
+  cursor: pointer;
+  font-size: 4rem;
+  align-self: flex-end;
+  margin: 24px;
+}
+span.nav-icon{
+  font-size: 2rem;
+}
+span.nav-icon.active{
+  color: var(--lightBlue);
+}
+
+.overlay-container {
+  z-index: 1;
+  position: fixed;
+  top: 15%;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--overlay);
+  transform: translateY(100%);
+  transition: transform 0.3s ease-out;
+  display: flex;
+  flex-direction: column;
+  border-radius: 48px;
+  color: white;
+}
+.overlay-container.show {
+  transform: translateY(0);
+  overflow-y: hidden;
+}
