--- a/amalie.css
+++ b/amalie.css
@@ -260,7 +260,7 @@ nav p{
 span.close-icon{
   color: white;
   cursor: pointer;
-  font-size: 4rem;
+  font-size: 2rem;
   align-self: flex-end;
   margin: 24px;
 }
@@ -276,6 +276,7 @@ span.nav-icon.active{
   position: fixed;
   top: 15%;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: var(--overlay);
