--- a/amalie.css
+++ b/amalie.css
@@ -234,28 +234,28 @@ body {
 
 
 nav{
-  background-color: var(--navBlue);
-  padding-block: 16px;
-  display: flex;
-  justify-content: space-evenly;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  z-index: 2;
+    background-color: var(--navBlue);
+    padding-block: 16px;
+    display: flex;
+    justify-content: space-evenly;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    z-index: 2;
 }
 nav p{
   font-size: 12px;
 }
 .nav-divider{
-  background-color: white;
-  width: 2px;
+    background-color: white;
+    width: 2px;
 }
 .nav-link-wrapper{
-  color: white;
-  text-align: center;
-  font-size: 1.25rem;
-  padding: 0 1rem;
+    color: white;
+    text-align: center;
+    font-size: 1.25rem;
+    padding: 0 1rem;
 }
 span.close-icon{
   color: white;
@@ -263,6 +263,7 @@ span.close-icon{
   font-size: 2rem;
   align-self: flex-end;
   margin: 24px;
+  margin-bottom: 0;
 }
 span.nav-icon{
   font-size: 2rem;
@@ -291,6 +292,77 @@ span.nav-icon.active{
   transform: translateY(0);
   overflow-y: hidden;
 }
+
+
+.data-settings{
+  margin: 16px;
+}
+.data-settings h2{
+  margin-bottom: 8px;
+}
+.data-containers{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 8px;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .3s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .3s;
+}
+
+input:checked + .slider {
+  background-color: var(--lightBlue);
+}
+
+input:checked + .slider:before {
+  transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 24px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+
 
 #favList {
   list-style: none;
