--- a/amalie.css
+++ b/amalie.css
@@ -1,16 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
-
 *{
   --darkBlue: #0E1A2B;
   --blue: #152741;
   --lightBlue: #4658D9;
   --overlay: #000000E6;
   --navBlue: #1b2956;
-
   font-family: "Bricolage Grotesque", sans-serif;
   margin: 0;
 }
-
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -25,7 +22,6 @@
   'GRAD' 0,
   'opsz' 24;
 }
-
 /* Body & container */
 body {
   font-family: "Bricolage Grotesque", sans-serif;
@@ -34,7 +30,6 @@ body {
   padding: 1rem;
   color: white;
 }
-
 /* city section */
 .cityView{
     display: flex;
@@ -45,25 +40,20 @@ body {
     gap: 1rem;
 }
 
-
 .cityName{
     font-size: 24px;
     font-weight: bold;
 }
-
 .cityDegree{
     font-size: 80px;
     font-weight: bold;
 }
-
 .cityDescription{
     font-size: 16px;
 }
-
 .cityView img{
     width: 100px;
 }
-
 /* hourly container */
 .hourlyScroll {
   display: flex;
@@ -72,7 +62,6 @@ body {
   padding: 10px;
   flex-direction: row;
 }
-
 .hourCard {
   background: var(--blue);
   color: white;
@@ -81,14 +70,11 @@ body {
   text-align: center;
   min-width: 70px;
 }
-
 .hourCard.active-hour {
   background: var(--lightBlue);
 }
 
-
 /* clothing */
-
 .clothing{
     background-color: var(--blue);
     padding: 2rem;
@@ -99,17 +85,14 @@ body {
     margin-top: 1rem;
      border-radius: 5px;
 }
-
 .clothing h2{
     font-size: 15px;
     font-style: bold;
 }
-
 .clothing p{
     font-size: 13px;
     font-style: normal;
 }
-
 /* forecast 5 days */
 .forecast{
     background-color: var(--blue);
@@ -121,7 +104,6 @@ body {
     margin-top: 1rem;
     border-radius: 5px;
 }
-
 .dayCard{
       background-color: var(--darkBlue);
         padding-block: 0.5rem;
@@ -131,64 +113,52 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-
 .dayCard.active-day {
   background-color: #4b5bff;
 }
-
 .dayCard img{
     width: 20%;
 }
-
 .dayCard p:first-child{
     width: 40%;
     font-size: 12px;
     font-style: bold;
 }
-
 .dayCard p:last-child{
-  font-size: 15px;
-  font-style: bold;
+    font-size: 15px;
+     font-style: bold;
 }
-
 /* vejrdata */
 .weatherData{
-  margin-top: 1rem;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
 }
-
 .dataStyle {
-  background-color: var(--blue);
-  padding: 1rem;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
+    background-color: var(--blue);
+       padding: 1rem;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
 }
-
 .dataStyle div{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
 }
-
 .dataStyle div h3{
-  font-size: 14px;
-  font-style: bold;
+    font-size: 14px;
+    font-style: bold;
 }
-
 .dataStyle p{
-  font-size: 24px;
-  font-style: bold;
+    font-size: 24px;
+    font-style: bold;
 }
-
 .searchContainer {
   position: relative;
   width: 100%;
   margin: 0 auto;
 }
-
 #suggestions {
   position: absolute;
   top: 100%;
@@ -203,7 +173,6 @@ body {
   padding: 0;
   margin-top: 5px;
 }
-
 #suggestions li {
   padding: 12px 16px;
   cursor: pointer;
@@ -211,11 +180,9 @@ body {
   font-size: 1rem;
   transition: background 0.2s;
 }
-
 #suggestions li:hover {
   background: rgba(255, 255, 255, 0.15);
 }
-
 #cityInput {
   width: 90%;
   padding: 12px 16px;
@@ -226,11 +193,9 @@ body {
   font-size: 1rem;
   outline: none;
 }
-
 #cityInput::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
-
 
 
 
@@ -272,7 +237,6 @@ span.nav-icon{
 span.nav-icon.active{
   color: var(--lightBlue);
 }
-
 .overlay-container {
   z-index: 1;
   position: fixed;
@@ -294,12 +258,72 @@ span.nav-icon.active{
   overflow-y: hidden;
 }
 
+.data-settings{
+  margin: 16px;
+}
+.data-settings h2{
+  margin-bottom: 8px;
+}
+.data-containers{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 8px;
+}
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px;
+}
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .3s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .3s;
+}
+input:checked + .slider {
+  background-color: var(--lightBlue);
+}
+input:checked + .slider:before {
+  transform: translateX(16px);
+}
+/* Rounded sliders */
+.slider.round {
+  border-radius: 24px;
+}
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+
 #favList {
   list-style: none;
   padding: 0;
   margin: 1rem;
 }
-
 #favList li {
   padding: 0.5rem 1rem;
   background-color: var(--blue);
@@ -307,23 +331,15 @@ span.nav-icon.active{
   border-radius: 5px;
   cursor: pointer;
 }
-
 #favStar {
   cursor: pointer;
   font-size: 2.4rem;
   margin-left: 0.5rem;
   vertical-align: middle;
 }
-
-.material-symbols-outlined.active {
+span#favStar.active {
   color: gold; 
-  font-variation-settings: 
-    'FILL' 1,
-    'wght' 200,
-    'GRAD' 0,
-    'opsz' 24;
 }
-
 /* Fav overlay box */
 .favCityBox {
   display: flex;
@@ -336,7 +352,6 @@ span.nav-icon.active{
   cursor: pointer;
   transition: background 0.2s;
 }
-
 #overlay-favorite .favCityBox p {
     font-size: 2rem;
     margin: 0 0.5rem;
@@ -357,12 +372,10 @@ span.nav-icon.active{
   color: #aaa;
 }
 
-
 /* Sørger for at by og temp står på linje */
 .favCityBox p:nth-child(2) {
   flex-grow: 1; /* tager plads mellem stjerne og temp */
 }
-
 
 
 /* Rasmus del */
@@ -379,7 +392,6 @@ span.nav-icon.active{
   align-items: center;
   z-index: 999;
 }
-
 /* Indhold */
 .overlay-content {
   width: 90%;
@@ -390,21 +402,18 @@ span.nav-icon.active{
   align-items: center;
   gap: 2rem;
 }
-
 /* Overskrift + tekst */
 .overlay-content h2 {
   font-size: 1rem;
   font-weight: 700;
   margin-bottom: 0.5rem;
 }
-
 .overlay-content p {
   font-size: 1rem;
   line-height: 1.4;
   opacity: 0.8;
   margin-bottom: 1.5rem;
 }
-
 /* Inputs */
 .overlay-content input,
 .overlay-content select {
@@ -418,80 +427,6 @@ span.nav-icon.active{
   margin-bottom: 3rem;
   outline: none;
 }
-
 .overlay-content select option {
   color: black;
-}
-
-
-
-
-
-
-
-.data-settings{
-  margin: 16px;
-}
-.data-settings h2{
-  margin-bottom: 8px;
-}
-.data-containers{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 8px;
-}
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 24px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: .3s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 16px;
-  width: 16px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: .3s;
-}
-
-input:checked + .slider {
-  background-color: var(--lightBlue);
-}
-
-input:checked + .slider:before {
-  transform: translateX(16px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 24px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
 }
